--- a/add-contact.html
+++ b/add-contact.html
@@ -8,16 +8,16 @@
     <body>
         <br/>
         <div class="contactForm">
-        <form id="editForm">
+        <form class="editForm">
             <label for="firstname">First name</label>
             <input type="text" name="firstname" id="firstname"><br/>
-            <label for="lastname">Last name</label><br/>
+            <label for="lastname">Last name</label>
             <input type="text" name="lastname" id="lastname"><br/>
-            <label for="mobile">Mobile</label><br/>
+            <label for="mobile">Mobile</label>
             <input type="text" name="mobile" id="mobile"><br/>
-            <label for="email">Email</label><br/>
+            <label for="email">Email</label>
             <input type="text" name="email" id="email"><br/>
-            <label for="avatar">Avatar</label><br/>
+            <label for="avatar">Avatar</label>
             <input type="file" name="avatar" id="avatar"><br/>
             <button type="submit" id="submitForm">Submit</button>         
         </form>
